# labcode-jmacey-2

./: .gitignore  README.md
DLA/: CMakeLists.txt
DLA/include/: Walker.h
DLA/src/: Image.cpp  Walker.cpp  main.cpp
Image/: CMakeLists.txt
Image/include/: Image.h
Image/src/: main.cpp
Image/test/: Image_tests.cpp  RGBA_Tests.cpp
ParticleNGL/: CMakeLists.txt
ParticleNGL/include/: Emitter.h  NGLScene.h  Particle.h
ParticleNGL/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
ParticleNGL/src/: Emitter.cpp  NGLScene.cpp
ParticleSOA/: CMakeLists.txt
ParticleSOA/include/: Emitter.h  NGLScene.h  Particle.h
ParticleSOA/src/: Emitter.cpp  NGLScene.cpp
RGBA/: CMakeLists.txt
RGBA/include/: RGBA.h
RGBA/src/: main.cpp
RGBA/test/: RGBA_Tests.cpp
